src/test/deca/syntax/invalid/lexer/print_error_arguments2.deca
// Description:
//    error in argument of print function
//
// Result:
//     token recognition error at: '''
//     line 9

{
    print('Hello World !');
}